[metadata]
name = func_adl
# dynamic = ["version"]
version = 0.1.0
description = "Functional Analysis Description Language Base Package"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/iris-hep/func_adl"
author = "Gordon Watts (IRIS-HEP/UW Seattle)"
author_email = "gwatts@uw.edu"
maintainer = "Gordon Watts (IRIS-HEP/UW Seattle)"
maintainer_email = "gwatts@uw.edu"
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Utilities

project_urls =
    Documentation = "https://github.com/iris-hep/func_adl"
    Issue Tracker = "https://github.com/iris-hep/func_adl/issues"

[options]
packages = find:
install_requires =
    make-it-sync
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
